# samp-log-core

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
cmake/: log-core-Config.cmake.in  log-coreConfig.cmake.in
include/samplog/: Api.hpp  DebugInfo.h  DebugInfo.hpp  ILogger.hpp  LogLevel.h  LogLevel.hpp  Logger.h  Logger.hpp  PluginLogger.h  PluginLogger.hpp  export.h
libs/g3log/: Build.cmake  CMakeLists.txt
libs/g3log/src/: crashhandler.hpp  crashhandler_unix.cpp  crashhandler_windows.cpp  g2log.cpp  g2log.hpp  g2loglevels.cpp  g2loglevels.hpp  g2logmessage.cpp  g2logmessage.hpp  g2logworker.cpp  g2logworker.hpp  g2time.cpp  g2time.hpp  stacktrace_windows.cpp  stlpatch_future.hpp
src/: .gitignore  AmxDebugManager.cpp  AmxDebugManager.hpp  Api.cpp  CAmxDebugManager.cpp  CAmxDebugManager.hpp  CAmxManager.cpp  CAmxManager.hpp  CLogger.cpp  CLogger.hpp  CMakeLists.txt  CMessage.hpp  CPluginLogger.cpp  CPluginLogger.hpp  CSampConfigReader.cpp  CSampConfigReader.hpp  FileChangeDetector.hpp  FileChangeDetectorLinux.cpp  FileChangeDetectorWindows.cpp  IPluginLogger.hpp  LogConfig.cpp  LogConfig.hpp  LogConfigReader.cpp  LogConfigReader.hpp  LogManager.cpp  LogManager.hpp  LogRotationManager.cpp  LogRotationManager.hpp  Logger.cpp  Logger.hpp  Message.hpp  SampConfigReader.cpp  SampConfigReader.hpp  Singleton.hpp  amxdbg.c  amxdbg.h  amxplugin2.cpp  crashhandler.hpp  crashhandler_unix.cpp  crashhandler_windows.cpp  (+6 more)
src/amx/: CMakeLists.txt  amx.h  amx2.h  amxdbg.c  amxdbg.h  amxplugin2.cpp
src/samplog/: PluginLogger.hpp
